--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -37,7 +37,7 @@ jobs:
           python manage.py collectstatic --noinput
 
       - name: Build static HTML
-        run: python manage.py distill-local dist
+        run: python manage.py distill-local dist --quiet --force
 
       - name: Upload Static Files Artifact
         uses: actions/upload-pages-artifact@v3
