--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           python manage.py collectstatic --noinput
           python manage.py distill-local dist --quiet --collectstatic --force
-          mv -r ./dist/django_blog_site/static dist/
+          mv -f ./dist/django_blog_site/static dist/
 
       - name: Upload Static Files Artifact
         uses: actions/upload-pages-artifact@v3
